cli7z: Fix detection of password prompt for p7zip 15.09

A space was removed which broke detection of the password prompt.

BUG: 358675
FIXED-IN: 15.12.3